--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
           Oops! Your bday isn't a lucky number but wait we got a gift for you!🎁
         </p>
       </div>
+      <div class="show-validate"></div>
     </div>
 
     <footer>
