--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
     <title>Birthday App</title>
   </head>
   <body>
-    <header><h1>Welcome To LuckyBirthday.com</h1></header>
+    <header>
+      <h1>Welcome To LuckyBirthday.com</h1>
+    </header>
 
     <div class="container">
       <label>
@@ -45,7 +47,9 @@
       </div>
       <div class="show-validate"></div>
     </div>
-
+    <p class="privacy-note">
+      we are not storing your data <button id="close-privacy">close</button>
+    </p>
     <footer>
       <p>made with 💛</p>
     </footer>
