style : changed bg color

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
+    />
     <link rel="stylesheet" href="style.css" />
     <title>Birthday App</title>
   </head>
@@ -52,6 +56,23 @@
     </p>
     <footer>
       <p>made with 💛</p>
+      <ul class="social">
+        <li>
+          <a href="https://twitter.com/code_prash"
+            >Twitter <i class="icons fab fa-twitter-square"></i
+          ></a>
+        </li>
+        <li>
+          <a href="https://www.linkedin.com/in/prashant-tanwar-302571179/"
+            >Linkedin <i class="fab fa-linkedin-in"></i
+          ></a>
+        </li>
+        <li>
+          <a href="https://github.com/Prashantrajput11/lucky-birthday-checker"
+            >Github<i class="icons fab fa-github"></i
+          ></a>
+        </li>
+      </ul>
     </footer>
 
     <script src="app.js"></script>
